--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "plugin-sample-vite",
+  "name": "document-styler",
   "version": "0.3.6",
   "type": "module",
-  "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan)",
-  "repository": "https://github.com/frostime/plugin-sample-vite",
+  "description": "Document Styler for Siyuan",
+  "repository": "https://github.com/TransMux/document-styler",
   "homepage": "",
-  "author": "frostime",
+  "author": "TransMux",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development VITE_SOURCEMAP=inline vite build --watch",
